[gd_scene load_steps=13 format=3 uid="uid://uli6lbh0bcn2"]

[ext_resource type="FontFile" uid="uid://boafiido6lxpb" path="res://assets/PressStart2P.ttf" id="1_l2qgg"]
[ext_resource type="Script" path="res://scripts/title_screen.gd" id="1_vtpvt"]
[ext_resource type="PackedScene" uid="uid://qh5j8imflq6k" path="res://Scenes/paintbrush_cursor.tscn" id="3_awoib"]
[ext_resource type="Texture2D" uid="uid://cqngkywrgde0e" path="res://assets/redSquare.png" id="3_gmxyc"]
[ext_resource type="AudioStream" uid="uid://ce8ms38wc0phf" path="res://assets/sound_click.wav" id="3_mriun"]
[ext_resource type="Texture2D" uid="uid://dnuyptsu218vr" path="res://assets/blueSquare.png" id="4_5wapx"]
[ext_resource type="Texture2D" uid="uid://cnn85cu4wjht3" path="res://assets/yellowSquare.png" id="5_4x8na"]
[ext_resource type="Texture2D" uid="uid://h4odx0bgt5a2" path="res://assets/greenSquare.png" id="6_74du3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aac5u"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.133333, 0.694118, 0.298039, 1)
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0m3at"]
bg_color = Color(0.247059, 0.282353, 0.8, 0.521569)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.247059, 0.282353, 0.8, 1)
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xxx3x"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.929412, 0.109804, 0.141176, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dl0fk"]
bg_color = Color(0.6, 0.6, 0.6, 0.490196)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(1, 0.94902, 0.0156863, 1)

[node name="TitleScreen" type="Node2D"]
script = ExtResource("1_vtpvt")

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="Background"]
z_index = -2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 1)

[node name="UI" type="Control" parent="."]
z_index = -1
layout_mode = 3
anchors_preset = 0
offset_right = 1150.0
offset_bottom = 647.0
mouse_filter = 1

[node name="LineEdit" type="LineEdit" parent="UI"]
layout_mode = 0
offset_left = 572.0
offset_top = 347.0
offset_right = 888.0
offset_bottom = 391.0
theme_override_fonts/font = ExtResource("1_l2qgg")
theme_override_styles/focus = SubResource("StyleBoxFlat_aac5u")
theme_override_styles/normal = SubResource("StyleBoxFlat_0m3at")
placeholder_text = "ANONYMOUS PLAYER 1"
max_length = 15

[node name="Title" type="RichTextLabel" parent="UI"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -176.5
offset_right = 512.0
offset_bottom = -91.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("1_l2qgg")
theme_override_font_sizes/normal_font_size = 85
bbcode_enabled = true
text = "[color=#ED1C24]C[/color][color=#FFF200]o[/color][color=#22B14C]l[/color][color=#3F48CC]o[/color][color=#ED1C24]u[/color][color=#FFF200]r[/color]Â [color=#22B14C]B[/color][color=#3F48CC]l[/color][color=#ED1C24]i[/color][color=#FFF200]n[/color][color=#22B14C]d[/color]
"

[node name="RichTextLabel3" type="RichTextLabel" parent="UI"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -444.0
offset_top = -67.5
offset_right = 444.0
offset_bottom = -38.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("1_l2qgg")
theme_override_font_sizes/normal_font_size = 25
text = "Think you know colour? Think again."

[node name="RichTextLabel2" type="RichTextLabel" parent="UI"]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -186.0
offset_top = 78.0
offset_right = 186.0
offset_bottom = 95.0
grow_horizontal = 2
theme_override_fonts/normal_font = ExtResource("1_l2qgg")
bbcode_enabled = true
text = "[color=#ED1C24]A CATNIP CREATIONS GAME[/color]"

[node name="RichTextLabel4" type="RichTextLabel" parent="UI"]
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -314.0
offset_top = -282.0
offset_right = 280.0
offset_bottom = -265.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/normal_font = ExtResource("1_l2qgg")
text = "ENTER YOUR NAME:"

[node name="RichTextLabel" type="RichTextLabel" parent="UI"]
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -442.5
offset_top = -65.0
offset_right = 442.5
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/normal_font = ExtResource("1_l2qgg")
text = "* Not suitable for colour blind players. Ironic, hey? *"

[node name="PlayButton" type="TextureButton" parent="."]
offset_left = 481.0
offset_top = 460.0
offset_right = 652.0
offset_bottom = 525.0
mouse_filter = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="PlayButton"]
stream = ExtResource("3_mriun")
playback_type = 1

[node name="RichTextLabel4" type="RichTextLabel" parent="PlayButton"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -12.5
offset_right = 50.0
offset_bottom = 12.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("1_l2qgg")
theme_override_font_sizes/normal_font_size = 25
text = "PLAY"

[node name="Panel" type="Panel" parent="PlayButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = -3.412
anchor_top = -2.669
anchor_right = -3.412
anchor_bottom = -2.669
offset_left = 583.452
offset_top = 173.485
offset_right = 755.452
offset_bottom = 238.485
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_xxx3x")

[node name="Panel2" type="Panel" parent="PlayButton"]
visible = false
layout_mode = 0
offset_right = 172.0
offset_bottom = 65.0
theme_override_styles/panel = SubResource("StyleBoxFlat_dl0fk")

[node name="PaintbrushCursor" parent="." instance=ExtResource("3_awoib")]

[node name="GreenSquare2" type="Sprite2D" parent="."]
position = Vector2(914, 507)
scale = Vector2(0.242432, 0.242432)
texture = ExtResource("6_74du3")

[node name="GreenSquare" type="Sprite2D" parent="."]
position = Vector2(75, 511)
scale = Vector2(0.3125, 0.3125)
texture = ExtResource("6_74du3")

[node name="BlueSquare2" type="Sprite2D" parent="."]
position = Vector2(996, 85)
scale = Vector2(0.273041, 0.273041)
texture = ExtResource("4_5wapx")

[node name="BlueSquare" type="Sprite2D" parent="."]
position = Vector2(126, 398)
scale = Vector2(0.226563, 0.226563)
texture = ExtResource("4_5wapx")

[node name="RedSquare2" type="Sprite2D" parent="."]
position = Vector2(1024, 458)
scale = Vector2(0.301174, 0.301174)
texture = ExtResource("3_gmxyc")

[node name="RedSquare3" type="Sprite2D" parent="."]
position = Vector2(173, 96)
scale = Vector2(0.151954, 0.151954)
texture = ExtResource("3_gmxyc")

[node name="RedSquare" type="Sprite2D" parent="."]
position = Vector2(197, 485)
scale = Vector2(0.144531, 0.144531)
texture = ExtResource("3_gmxyc")

[node name="YellowSquare2" type="Sprite2D" parent="."]
position = Vector2(1085, 558)
scale = Vector2(0.152824, 0.152824)
texture = ExtResource("5_4x8na")

[node name="YellowSquare3" type="Sprite2D" parent="."]
position = Vector2(78, 61)
scale = Vector2(0.252193, 0.252193)
texture = ExtResource("5_4x8na")

[node name="YellowSquare" type="Sprite2D" parent="."]
position = Vector2(1088, 46)
scale = Vector2(0.175781, 0.175781)
texture = ExtResource("5_4x8na")

[connection signal="mouse_entered" from="PlayButton" to="." method="_on_play_button_mouse_entered"]
[connection signal="mouse_exited" from="PlayButton" to="." method="_on_play_button_mouse_exited"]
[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
